--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -35,7 +35,7 @@ body {
   bottom: 0;
   left: 0;
   padding: 5px;
-  background: #1b3146;
+  background: #310052;
 }
 
 .navbar {
@@ -69,7 +69,7 @@ select {
   display: block;
   width: 100%;
   padding: 8px;
-  color: #310052;
+  color: #8e979f;
   outline: none;
 }
 
@@ -153,7 +153,7 @@ select {
   #table-area tr td:first-child {
     font-size: 1.8em;
     font-weight: bold;
-    background: #310052;
+    background: #1b3146;
   }
 
   #table-area tr td:last-child {
@@ -166,7 +166,7 @@ select {
     height: 1px;
     margin-top: 20px;
     content: " ";
-    background: #310052;
+    background: aliceblue;
   }
 
   #table-area td {
