--- a/UFO-level-2/static/css/style.css
+++ b/UFO-level-2/static/css/style.css
@@ -25,7 +25,7 @@ body {
   bottom: 0;
   left: 0;
   min-height: 100px;
-  background: #4e5d6c;
+  background: #310052;
 }
 
 /* The code styles the text at the bottom of the footer */
@@ -69,7 +69,7 @@ select {
   display: block;
   width: 100%;
   padding: 8px;
-  color: #8e979f;
+  color: #310052;
   outline: none;
 }
 
@@ -153,7 +153,7 @@ select {
   #table-area tr td:first-child {
     font-size: 1.8em;
     font-weight: bold;
-    background: #1b3146;
+    background: #310052;
   }
 
   #table-area tr td:last-child {
@@ -166,7 +166,7 @@ select {
     height: 1px;
     margin-top: 20px;
     content: " ";
-    background: aliceblue;
+    background: #310052;
   }
 
   #table-area td {
